<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_menu"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item
        android:id="@+id/activities_menu"
        android:title="@string/activities"
        android:icon="@drawable/ic_act"
        app:showAsAction="ifRoom"
        android:enabled="true"/>
    <item
        android:id="@+id/gallery_menu"
        android:title="@string/gallery"
        android:icon="@drawable/ic_gallery"
        app:showAsAction="ifRoom"
        android:enabled="true"/>
    <item
        android:id="@+id/favorite_menu"
        android:title="@string/favorite"
        android:icon="@drawable/ic_fav"
        app:showAsAction="ifRoom"
        android:enabled="true"/>
    <item
        android:id="@+id/profile_menu"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

</menu>
