<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/latar"
    android:paddingBottom="57dp">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/foto_home"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textStyle="bold"
        android:textSize="10pt"
        android:layout_marginBottom="16dp"
        android:textColor="@color/isi"
        android:layout_gravity="center_horizontal"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                <TextView
                    android:id="@+id/Mikes_judul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Mikes_judul"
                    android:textStyle="bold"
                    android:textColor="@color/isi"
                    android:textSize="8pt"/>
                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/ic_tea"/>
                    <TextView
                    android:id="@+id/mike_isi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Mikes_isi"
                    android:textColor="@color/isi"
                    android:textSize="7pt"/>

                </LinearLayout>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                <TextView
                    android:id="@+id/makes_judul"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/Makes_judul"
                    android:textStyle="bold"
                    android:textColor="@color/isi"
                    android:textSize="8pt"/>
                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/ic_nasgor"/>
                    <TextView
                        android:id="@+id/makes_isi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Makes_isi"
                        android:textColor="@color/isi"
                        android:textSize="7pt"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>



    <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
        android:paddingEnd="25dp"
        android:paddingStart="25dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
        <TextView
            android:id="@+id/hobi_judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobi_judul"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/isi"
            android:textSize="8pt"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                ><LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:src="@drawable/ic_membaca"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/membaca"
                            android:textSize="7pt"
                            android:textColor="@color/isi"/>
                    </LinearLayout>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">
                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:src="@drawable/ic_basketball"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/basket"
                            android:textSize="7pt"
                            android:textColor="@color/isi"/>

                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
            </FrameLayout>

        </LinearLayout>
    </FrameLayout>


    <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
        <TextView
            android:id="@+id/cita_judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/citaCita_judul"
            android:textStyle="bold"
            android:textColor="@color/isi"
            android:textSize="8pt"/>
            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_astronaut"/>
            <TextView
                android:id="@+id/astronaut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/astronaut"
                android:textColor="@color/isi"
                android:textSize="7pt"/>


        </LinearLayout>
    </FrameLayout>
</LinearLayout>